# template-python

./: .gitignore  README.md  cookiecutter.json  dev-requirements.txt  doc-requirements.txt  post_gen_project.bat  pyproject.toml  requirements.txt
.github/: run_template_checks.yml
.github/workflows/: mypy_typing.yml  release.yml  run_template_checks.yml
ci/linux/: lint.sh  test_unit.sh  typecheck.sh
ci/win32/: create_venv.cmd  install_dependencies.cmd  lint.cmd  test_unit.cmd  update_dependencies.cmd
doc/dev_documentation/: conf.py  index.rst
doc/user_documentation/: conf.py  index.rst
hooks/: post_gen_project.bat  post_gen_project.sh
src/newchess/: __init__.py
src/newchess/adapter/api/: application_controller.py  output_db_repository.py
src/newchess/adapter/database/: db_connection.py  db_connection_factory.py  mappers.py  repository_factory.py
src/newchess/adapter/spi/: input_db_repository.py
src/newchess/adapter/spi/database/: db_connection_factory.py  db_models.py  input_db_repository.py  mappers.py  output_db_repository.py  repository_factory.py
src/newchess/application/repositories/: input_db_repository_abstract.py  output_db_repository_abstract.py
src/newchess/application/use_cases/: run_simulation.py
src/newchess/domain/: esdl_model.py  heat_network.py
src/newchess/infrastructure/: app.py  app_logging.py
src/your_package/: __init__.py  app_logging.py  main.py
src/your_package/adapter/api/: application_controller.py
src/your_package/adapter/spi/: mappers.py
src/your_package/adapter/spi/database/: db_models.py  input_db_repository.py  mappers.py  repository_factory.py
src/your_package/application/mappers/: db_mapper.py
src/your_package/application/use_cases/: run_simulation.py
src/your_package/domain/: application_configuration.py  base_configuration_entity.py  esdl_model.py  simulation_configuration.py
unit_test/: test_main.py
{{cookiecutter.repo_name}}/: .gitignore  Dockerfile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  run.sh
{{cookiecutter.repo_name}}/.github/workflows/: BuildTest.yml  BuildTest_win32.yml  ci.yml  codeql-analysis.yml  container_image.yml  lint.yml  publish_container_image.yml  release.yml
{{cookiecutter.repo_name}}/ci/linux/: create_venv.sh  lint.sh  typecheck.sh
{{cookiecutter.repo_name}}/ci/win32/: create_venv.cmd  lint.cmd  typecheck.cmd  update_dependencies.cmd
{{cookiecutter.repo_name}}/doc/dev_documentation/: conf.py  index.rst
{{cookiecutter.repo_name}}/doc/user_documentation/: conf.py  index.rst
{{cookiecutter.repo_name}}/src/{{cookiecutter.python_import_name}}/: __init__.py  __main__.py  app_logging.py  {{cookiecutter.python_import_name}}.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.python_import_name}}/adapter/api/: application_controller.py  output_db_repository.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.python_import_name}}/adapter/database/: db_connection_factory.py  mappers.py  repository_factory.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.python_import_name}}/adapter/spi/: input_db_repository.py  mappers.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.python_import_name}}/application/: configuration.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.python_import_name}}/application/repositories/: input_db_repository_abstract.py  output_db_repository_abstract.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.python_import_name}}/application/use_cases/: run_simulation.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.python_import_name}}/domain/: simulation_configuration.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.python_import_name}}/infrastructure/: app.py
{{cookiecutter.repo_name}}/unit_test/: test_main.py
